# celebal_Project

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  requirements_audit_and_workflow.md  walkthrough.md
app/: streamlit_app.py
configs/: thresholds.json
notebooks/: 01_data_exploration.ipynb  02_results_and_analysis.ipynb
reports/: README.md
runs/baseline/: best.pt  classes.json  history.json
runs/change_detection/: summary.json
runs/change_detection/heatmaps/: heatmap_summary.json
runs/data_profile/: class_distribution.csv
runs/imbalance_experiment/: analysis.md
runs/resnet18/: history.json
runs/resnet18/error_analysis/: top_misclassifications.json
runs/resnet18/eurosat_eval/: top_misclassifications.json
runs/resnet18/uc_merced_eval/: classification_report.csv  top_misclassifications.json
runs/spatial_leakage/: block_report.json  random_report.json  spatial_leakage_writeup.md
runs/spatial_leakage/block/: classification_report.csv
runs/spatial_leakage/random/: classification_report.csv
scripts/: bonus_a_gradcam.py  bonus_d_imbalance.py  download_datasets.py  evaluate.py  generate_report.py  plot_dataset.py  run_change_detection.py  run_pipeline.bat  run_pipeline.sh  save_change_heatmaps.py  spatial_leakage_experiment.py  train_baseline.py  train_finetune.py  visualize_errors.py
src/landuse/: __init__.py  change.py  config.py  data.py  metrics.py  models.py  train.py
tests/: conftest.py  test_change.py  test_dashboard.py  test_data.py  test_metrics.py  test_smoke.py
