[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "satellite-landuse-change"
version = "0.1.0"
description = "Satellite land-use classification and temporal change detection"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

